[package]
name = "leptos-react"
version = "0.1.0"
edition = "2024"
authors = ["Dennis Müller <d.mueller@kwarc.info>"]
description = "interoparibility between leptos and react"
license = "GPL-3.0-or-later"
repository = "https://github.com/FlexiFormal/leptos-react"
keywords = ["leptos", "hydrate", "HTML"]
readme = "README.md"
exclude = [".idea/*", ".zed/*", "examples/*", "target/*"]

[features]
csr = ["leptos/csr"]
hydrate = ["leptos/hydrate"]
ssr = ["leptos/ssr"]
react = ["typescript"]
typescript = []

[dependencies]
web-sys = { version = "0", features = [] }
leptos = { version = "0.8" }
send_wrapper = "0.6"
parking_lot = "0.12"
wasm-bindgen = "0.2"
tracing = "0.1"
thiserror = "2"
paste = "1"
ftml-js-utils = {git = "https://github.com/FlexiFormal/FTML.git"}
#ftml-js-utils = { path="../FTML/js-utils" }
#leptos-posthoc = { path = "../leptos-posthoc" }
